# cs2cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cs2cpp.natvis  vcpkg.json
.github/workflows/: MacOS.yml  Windows.yml  macos-latest.yml  ubuntu-latest.yml  windows-latest.yml
cmake/: cs2cpp-config.cmake.in  options.cmake  vcpkg.cmake
include/: CMakeLists.txt
include/System/: Console.h  ConsoleColor.h  ConsoleKey.h  ConsoleKeyInfo.h  ConsoleModifiers.h  DateTime.h  DateTimeKind.h  DayOfWeek.h  Delegate.h  Environment.MacOS.inl  Environment.Posix.inl  Environment.Windows.inl  Environment.h  EnvironmentVariableTarget.h  FunctionTraits.h  OperatingSystem.h  PlatformID.h  Random.h  ReadOnlySpan.h  SafeFilePointer.h  Span.h  Stopwatch.h  String.h  StringSplitOptions.h  StringView.h  TimeSpan.h  TimeZoneInfo.h  Timer.h  Version.h
include/System.Diagnostics/: Debug.h
include/System.IO/: ConsoleStream.h  Directory.h  DirectoryInfo.h  File.h  FileAccess.h  FileMode.h  FileOptions.h  FileShare.h  FileStream.h  Path.Posix.inl  Path.Windows.inl  Path.h  SafeFileDescriptor.h  SafeFilePointer.h  SeekOrigin.h  Stream.h  StreamReader.h  StreamWriter.h  TextReader.h  TextWriter.h
include/System.IO.Enumeration/: DirectoryIterator.h  FileSystemEnumerable.Posix.inl  FileSystemEnumerable.Windows.inl  FileSystemEnumerable.h  SearchOption.h
include/System.Net/Sockets/: AddressFamily.h  ProtocolType.h  SocketType.h
include/System.Text/: CodePageDataItem.h  DecoderExceptionFallback.h  DecoderFallback.h  DecoderReplacementFallback.h  EncoderExceptionFallback.h  EncoderFallback.h  EncoderReplacementFallback.h  Encoding.h  EncodingData.h  EncodingInfo.h  EncodingTable.h  ICUEncoding.h  NormalizationForm.h  OSEncoding.h
include/System/Diagnostics/: Debug.h
include/System/Drawing/: Image.h
include/System/IO/: ConsoleStream.Windows.h  ConsoleStream.h  Directory.h  DirectoryInfo.h  File.h  FileAttributes.h  FileStream.h  FileSystemEnumerable.Posix.inl  FileSystemEnumerable.Windows.inl  FileSystemEnumerable.h  Path.Posix.h  Path.Posix.inl  Path.Windows.h  Path.Windows.inl  Path.h  SafeFilePointer.h  Stream.h  StreamReader.h  StreamWriter.h  TextReader.h  TextWriter.h
include/System/Text/: Encoding.h
include/System/Windows/: SafeFindHandle.h  SafeHandle.h  SafeRegistryHandle.h  Windows.h
src/: CMakeLists.txt
src/System/: Console.Posix.cpp  Console.Windows.cpp  Console.cpp  DateTime.cpp  Environment.Darwin.mm  Environment.MacOS.mm  Environment.Posix.cpp  Environment.Windows.cpp  Environment.cpp  OperatingSystem.cpp  Random.cpp  String.cpp  StringView.cpp  TimeSpan.cpp  TimeZoneInfo.MacOS.mm  TimeZoneInfo.Windows.cpp  TimeZoneInfo.cpp  Timer.cpp  Version.cpp
src/System.Diagnostics/: Debug.Posix.cpp  Debug.Windows.cpp  Debug.cpp
src/System.IO/: ConsoleStream.Posix.cpp  ConsoleStream.Windows.cpp  ConsoleStream.cpp  Directory.Posix.cpp  Directory.Windows.cpp  Directory.cpp  DirectoryInfo.cpp  File.Darwin.mm  File.Posix.cpp  File.Windows.cpp  File.cpp  FileStream.Posix.cpp  FileStream.Windows.cpp  FileStream.cpp  Path.Posix.cpp  Path.Windows.cpp  Path.cpp  StreamReader.cpp  StreamWriter.cpp  TextReader.cpp  TextWriter.cpp
src/System.IO.Enumeration/: DirectoryIterator.Posix.cpp  DirectoryIterator.Windows.cpp  DirectoryIterator.cpp  FileSystemEnumerable.Windows.cpp  FileSystemEnumerable.cpp
src/System.Text/: CodePageDataItem.cpp  DecoderExceptionFallback.cpp  DecoderFallback.cpp  DecoderReplacementFallback.cpp  EncoderExceptionFallback.cpp  EncoderFallback.cpp  EncoderReplacementFallback.cpp  Encoding.cpp  EncodingInfo.cpp  EncodingTable.cpp  ICUEncoding.cpp  OSEncoding.Posix.cpp  OSEncoding.Windows.cpp  OSEncoding.cpp
src/System/Diagnostics/: Debug.MacOS.mm  Debug.Windows.cpp  Debug.cpp
src/System/Drawing/: Image.cpp
src/System/IO/: ConsoleStream.Windows.cpp  ConsoleStream.cpp  Directory.Posix.cpp  Directory.Windows.cpp  Directory.cpp  DirectoryInfo.cpp  File.MacOS.mm  File.Posix.cpp  File.Windows.cpp  File.cpp  FileStream.Posix.cpp  FileStream.Windows.cpp  FileStream.cpp  Path.Posix.cpp  Path.Windows.cpp  Path.cpp  StreamReader.cpp  StreamWriter.cpp  TextReader.cpp  TextWriter.cpp
src/System/Text/: Encoding.cpp
test/: CMakeLists.txt  main.cpp
test/include/: TempDirectory.h  TempFile.h
test/src/: Console.cpp  DateTime.cpp  Delegate.cpp  Environment.cpp  OperatingSystem.cpp  Random.cpp  Span.cpp  TimeSpan.cpp  TimeZoneInfo.cpp  Version.cpp
test/src/IO/: Directory.cpp  File.cpp  FileStream.cpp  Path.cpp  StreamWriter.cpp  TempDirectory.cpp  TempFile.cpp
test/src/Text/: ICUEncoding.cpp  OSEncoding.cpp  String.cpp
